# test-scraper-benchmark

./: .env.example  .gitignore  README.md  pyproject.toml  run_benchmark.py
benchmark/: judge.py  report.py  runner.py
benchmark/scrapers/: __init__.py  anakin.py  base.py  firecrawl.py  oxylabs.py  scraperapi.py  scrapingbee.py  tavily.py  zenrows.py
results/official/: results_2026-06-28.csv  results_2026-06-28.json
scripts/: generate_plots.py
urls/: test_urls.yaml  urls.yaml
