[project]
name = "scraper-benchmark"
version = "1.0.0"
description = "Benchmark Anakin URL Scraper against leading web scraping APIs"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.ruff]
line-length = 100
